Adding maven surefire to enable build testing